--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "^0.171.0"
+    "three": "^0.171.0",
+    "three-stdlib": "^2.34.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
